--- a/manifest.json
+++ b/manifest.json
@@ -1,8 +1,8 @@
 {
-	"name": "Example 1: image transform",
+	"name": "Image transform",
 	"version": "0.0.1",
 	"manifest_version": 2,
-	"description": "This is tinpopo",
+	"description": " Rotate images",
 	"content_scripts": [
 		{
 			"matches": [ "<all_urls>" ],
